--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            tools:listitem="@layout/reyclerview_item"/>
+
         <View
             android:id="@+id/leftBar"
             android:layout_width="10dp"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:background="@color/black" />
+            android:background="@android:color/black" />
 
         <View
             android:id="@+id/rightBar"
