--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,10 @@
         android:id="@+id/frameLayout"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,24 +26,23 @@
             android:layout_height="match_parent"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:background="@android:color/holo_blue_light"
-            />
+            android:background="@android:color/holo_blue_light" />
 
         <View
             android:id="@+id/leftBar"
             android:layout_width="15dp"
             android:layout_height="match_parent"
-            android:padding="16dp"
             android:layout_gravity="left"
-            android:background="@android:color/black" />
+            android:background="@android:color/black"
+            android:padding="16dp" />
 
         <View
             android:id="@+id/rightBar"
             android:layout_width="15dp"
             android:layout_height="match_parent"
-            android:padding="16dp"
             android:layout_gravity="right"
-            android:background="@android:color/holo_red_dark" />
+            android:background="@android:color/holo_red_dark"
+            android:padding="16dp" />
 
     </FrameLayout>
 
@@ -50,27 +50,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:text="TextView"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
         app:layout_constraintStart_toStartOf="@+id/frameLayout"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
-
-    <TextView
-        android:id="@+id/rightBarText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/leftBarText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/rightBarText"
-        app:layout_constraintTop_toBottomOf="@+id/rightBarText" />
+        tools:layout_editor_absoluteY="680dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
