--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,38 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/topSlider"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
+            android:background="@android:color/holo_blue_light" />
+
+        <View
+            android:id="@+id/zoomSlider"
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
+            android:background="@drawable/slider_bar_background"
+            android:padding="16dp" />
+
+    </FrameLayout>
+
+
+    <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="0dp"
         android:layout_height="100dp"
@@ -19,7 +51,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/topSlider">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
